# Luxus-O.S

./: .gitignore  .mcp.json  CLAUDE.md  CODE_REVIEW_FIXES.md  DOCUMENTACION.md  FINAL_EXECUTION_SUMMARY.md  MAIA_2026_COLAB_READY.py  MAIA_2026_COLAB_TRAINING_NOTEBOOK.py  MAIA_2026_COMPLETE_AUTOMATED.py  MAIA_2026_COMPLETE_TRAINING_EXECUTOR.py  MAIA_2026_EXECUTE_NOW.py  MAIA_2026_FINAL_TRAINING.py  MAIA_2026_INSTRUCCIONES_FINALES.md  MAIA_2026_OPTIMIZATION_EXECUTOR.py  MAIA_2026_PRODUCTION_EXECUTOR.py  MAIA_2026_READY.txt  MASTER_LLM_CREATION.py  Maia_Trainer_v2.ipynb  Makefile  README.md  SETUP_COMPLETE.md  START_TRAINING.sh  STRATEGIC_EVALUATION.md  execute_llm_creation.py  index.ts  mcp_execute_finetuning.sh  setup_maia.bat  setup_maia.sh  train_maia_modal.py  tsconfig.json
.claude/: settings.json
MAIA_2026_FINAL/: COLAB_LAUNCH_SCRIPT.py  FINAL_VERIFICATION_COMPLETE.json  activate_agents.py  agent_activation_manifest.json  colab_mcp_executor.json  consolidate_skills.py  evaluation_suite_final.json  skills_activation_manifest.json  system_prompt_maia_2026.md  training_executor_final.py  verification_report.json
Maia/: Maia_Trainer.ipynb  Maia_Trainer_Kaggle.ipynb  Modelfile  maia-brain.ts
TECHBRAIN/: CONTRIBUTING.md  README.md
dataset/: classification_report.txt  (+1 more)
maia-desktop/src-tauri/: Cargo.toml  tauri.conf.json
maia-desktop/src-tauri/capabilities/: default.json
maia-desktop/src-tauri/icons/: README.md
maia-desktop/src-tauri/src/: agents.rs  channels.rs  embed.rs  ingest.rs  lib.rs  main.rs  model.rs  notebook.rs  rag.rs  state.rs  supervisor.rs
(+82430 files in other folders)
