[package]
name = "maia-desktop"
version = "0.1.0"
description = "MAIA — OpenClaw GUI con Material 3 Expressive y Gemma 4 E4B"
authors = ["MAIA"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "maia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
sysinfo = "0.32"
# RAG: embeddings + vector store
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
tokenizers = "0.20"
lancedb = "0.13"
arrow-array = "53"
arrow-schema = "53"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
